# FireGoRest

./: README.rst  pyproject.toml  tox.ini
firegorest/: __init__.py  doctools.py  types.py
tests/: test_firegorest.py
