[tool.poetry]
name = "firegorest"
version = "0.1.0"
description = "Some utilties to work with Google Firestore API."
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]
maintainers = [
    "Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"
]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/sunshine-tech/FireGoRest.git"
classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet",
    "Topic :: Utilities"
]
keywords = ["google", "cloud", "firestore", "functions"]

[tool.poetry.dependencies]
python = "^3.7"
importlib_metadata = "^1.4.0"
iso8601 = "^0.1.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pygments = "^2.5.2"
pytest-flake8 = "^1.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
